2001-03-23  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* README, README.ja: Update for w3m-0.2.1.

	* Makefile.in (dist, tarball): Fix that some files are not
	included in package.

2001-03-22  Keisuke Nishida  <kxn30@po.cwru.edu>

	* w3m.el (w3m-goto-url): Insert the current url for input by default.

2001-03-22  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-xmas.el (w3m-update-toolbar): New function.
	(w3m-setup-toolbar): Added docstring.

	* w3m.el (w3m-goto-url): Call `w3m-update-toolbar'.
	(toplevel): Define `w3m-update-toolbar' if it is not bound as function.

2001-03-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-w3m-attributes): Ignore errors while parsing a
	time-string.

2001-03-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Moved generic macros and defsubsts in front of functions.
	(w3m-content-encoding, w3m-content-charset): Commented out.
	* w3m-form.el (w3m-parse-attributes): Moved from w3m.el.

2001-03-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Make `w3m-fontify-forms' and `w3m-form-parse-region' to
	be always autoloaded; encolose the defining procedures for the
	unbound functions with `eval-and-compile'.
	(browse-url-interactive-arg): Bind it only at the compile-time as
	an autoload'ed function.
	* w3m-xmas.el: Provide `w3m-xmas' and then require `w3m'.
	* w3m-om.el: Provide `w3m-om' and then require `w3m'.
	* w3m-form.el: Require `w3m'.
	* w3m-e21.el: Provide `w3m-e21' and then require `w3m'.

2001-03-22  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m-antenna.el: All occurrence of `natsumikan' is replaced with
	`natsumican'.

2001-03-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (coding-system-category): Don't define it for the Emacs
	variants.
	* w3m-om.el (coding-system-category): Defalias to
	`get-code-mnemonic'.
	* w3m-xmas.el (coding-system-category): Defalias to
	`coding-system-type' if it is not bound.

	* w3mhack.el (w3mhack-version): Don't require `w3m' in the top